--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         java-version: '21'
         distribution: 'temurin'
-        server-id: ossrh
+        server-id: central
         server-username: MVN_USERNAME 
         server-password: MVN_PASSWORD
         gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
